--- a/zlqy/css/index.less
+++ b/zlqy/css/index.less
@@ -215,25 +215,27 @@ nav {
          left: 23px;
         } 
     }
-    .mapContainer {
-        position: relative;
-        margin: 0 auto;
-        margin-top:-30px; 
-        width: @width;
-        height:554px;
-        overflow: hidden;
-        .kuang {
+    .kuang {
             position: absolute;
+            z-index: 500;
             width: @width;
-            height:554px;
+            height:547px;
             background-image: url(../images/map-t.png);
         }
+    .mapContainer {
+        position: relative;
+        margin: 0 auto; 
+        width: 980px;
+        height:523px;
+        overflow: hidden;
         #inner {
            margin: 0 auto;
-           margin-top: 22px; 
-           width:984px;
-           height: 500px;
-           background: transparent url(../images/map.png) center center no-repeat;
+           margin-top: 23px; 
+           width:980px;
+           height: 532px;
+           background-image: url(../images/map.png);
+           background-size:100% 100%;
+           transform-origin: 50% 50%;
            .iconfont {
                 font-size: 40px;
                 color: #FB8D05;
@@ -241,81 +243,103 @@ nav {
                 cursor: pointer;
            }
            #oldlib{
+                z-index: 1000;
                 position: relative;
-                top: 44%;
+                top: 50%;
                 left: 50%;
            }
            #taiji{
+                z-index: 1000;
                 position: relative;
-                top: 12%;
-                left: 33%;
+                top: 23%;
+                left: 32%;
            }
             #laocao{
+                z-index: 1000;
                 position: relative;
-                top: 34%;
+                top: 40%;
                 left: 29%;
            }
             #bashiwan{
+                z-index: 1000;
                 position: relative;
                 top: 60%;
                 left: 26%;
            }
            #qrp {
+                z-index: 1000;
                 position: relative;
-                top: 46%;
-                left: 38%;
+                top: 52%;
+                left: 36%;
            }
             #xk {
+                z-index: 1000;
                 position: relative;
-                top: 62%;
+                top: 68%;
                 left: 27%;
            }
             #fengyu {
+                z-index: 1000;
                 position: relative;
-                top: 21%;
+                top: 31%;
                 left: 2%;
            }
             #wudong {
+                z-index: 1000;
                 position: relative;
-                top: 25%;
+                top: 35%;
                 left: 9.5%;
            }
             #shutu {
+                z-index: 1000;
                 position: relative;
                 top: 50%;
                 left: -11%;
            }
             #yf {
+                z-index: 1000;
                 position: relative;
-                top: 33%;
+                top: 39%;
                 left: -24%;
            }
            #newgate{
+                z-index: 500;
                 position: relative;
-                top: 63%;
+                top: 60%;
                 left: -24.5%;
            }
             #erjiao {
+                z-index: 1000;
                 position: relative;
-                top: 44%;
+                top: 49%;
                 left: -8%;
            }
             #sijiao {
+                z-index: 1000;
                 position: relative;
-                top: 20%;
+                top: 30%;
                 left: -39%;
            }
             #sanjiao {
+                z-index: 1000;
                 position: relative;
-                top: 14%;
+                top: 24%;
                 left: -39%;
            }
             #bajiao {
+                z-index: 1000;
                 position: relative;
-                top: 0%;
+                top: 12%;
                 left: -44%;
            }
+           #chqs {
+                z-index: 1000;
+                position: relative;
+                top: 55%;
+                left: -23%;
+           }
            .place {
+                z-index: 1000;
                 position: absolute;
                 top: 350px;
                 left: 483px;
@@ -331,6 +355,7 @@ nav {
                 cursor: pointer;
             }
             #mapBanner {
+                z-index: 10000;
                 position: absolute;
                 top: 600px;
                 transition: top 1s;
@@ -364,7 +389,7 @@ nav {
                         margin-left: 5.5px;
                     }
                 }
-                .picWhole {
+                #picWhole {
                     margin: 0 auto;
                     width: 465px;
                     height: 330px;
@@ -390,42 +415,61 @@ nav {
                             font-size: 37px;
                         }
                         #pre {
+                            display: none;
                             z-index: 1000;
                             position: absolute;
                             top: 60px;
                             width: 46px;
                             height: 63px;
-                            background: black;
-                            opacity: 0.6;
+                            background: url(../images/jiantou.png);
                         }
                         #next {
+                            display: none;
                             z-index: 1000;
                             position: absolute;
                             top: 60px;
                             left: 419px;
                             width: 46px;
                             height: 63px;
-                            background-color:black;
-                            opacity: 0.6;
+                            background: url(../images/jiantou.png);
                         }
                         #slider {
                             position: absolute;
-                            left:0px;
+                            left: 0px;
                             transition: left 1s;
-                            width: 6975px;
+                            width: 7440px;
                             .same {
                                 float:left;
                                 width: 465px;
                                 height: 187px;
+                                overflow: hidden;
                             }
                         }
                     }
+                    .enter {
+                            margin:0 auto;
+                            width: 465px;
+                            height: 130px;
+                            margin-top: 20px;
+                            // background-color: red;
+                            #biaoti {
+                                text-align: center;
+                                font-size: 18px;
+                            }
+                            #pa {
+                                margin-top: 12px;
+                                font-size:12px;
+                                color: #666666;
+                                line-height: 25px; 
+                            }
+                        }
                 }
             }
             .suofang {
+                z-index: 1000;
                 position: absolute;
                 top: 420px;
-                left: 950px;
+                left: 890px;
                 width: 38px;
                 height: 84px;
                 div {
