--- a/zengyu/css/strategy.css
+++ b/zengyu/css/strategy.css
@@ -497,8 +497,26 @@ p {
 	width: 965px;
 	height: 370px;
 	margin: 0 auto;
-	overflow: hidden;
+	overflow-y: auto;
 
+}
+.room_word::-webkit-scrollbar  
+{  
+    width: 12px;  
+    height: 16px;  
+    background-color: #fdea5d;  
+}    
+.room_word::-webkit-scrollbar-track  
+{  
+	-webkit-box-shadow: inset 0 0 6px rgba(255,241,156,0.3);  
+    border-radius: 5px;  
+    background-color: #ffef8a;  
+}  
+
+.room_word::-webkit-scrollbar-thumb  
+{  
+    border-radius: 10px;   
+    background-color: #fffad3;  
 }
 .room_word p {
 	padding: 0;
