--- a/zlqy/css/help.less
+++ b/zlqy/css/help.less
@@ -51,27 +51,48 @@ nav {
             height: 60px;
             width: 720px;
             .show{
-                color:#82CB83; 
+                color:#82CB83;  
+                border-bottom: 5px solid #82CB83;
             }
             a{
+                margin-left: 40px;
                 box-sizing: border-box;
                 display: block;
                 float: left;
-                height: 60px;
-                width: 102px;
                 font-size: 18px;
                 color: black;
                 line-height: 60px;
                 text-align: center;
+                font-weight: bold;
             }
             a:hover {
                 cursor: pointer;
                 color: #82CB83;
                 border-bottom: 5px solid #82CB83;
             }
-            #forth {
-                color: #82CB83;
-                border-bottom: 5px solid #82CB83;
+            #a1 {
+                width: 41px;
+                height: 55px;
+            }
+             #a2 {
+                width: 75px;
+                height: 55px;
+            }
+            #a3 {
+                width: 75px;
+                height: 55px;
+            }
+            #a4 {
+                width: 75px;
+                height: 55px;
+            }
+            #a5 {
+                width: 98px;
+                height: 55px;
+            }
+            #a6 {
+                width: 75px;
+                height: 55px;
             }
             span {
                 display: block;
@@ -267,7 +288,7 @@ nav {
    background-image: url(../images/tipback.png);
     position: relative;
     background-size: 100% 100%;
-    top: 41px;
+    top: 42px;
     p {
        margin-top: 20px;
        color: #F89316; 
